--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
 						</svg>
 						<div>
 						  <h5 class="fw-bold mb-0">LocalAddr</h5>
-						  <h6>${localAddr}</h6>
+						  <h6>{{ .localAddr }}</h6>
 						</div>
 					  </li>
 					  <li class="d-flex gap-4">
