--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,7 @@
 						</g>
 						</svg>
 						<div>
-						  <h4 class="fw-bold mb-0">Locale</h4>
+						  <h4 class="fw-bold mb-0">Language</h4>
 						  <h6>{{ .locale }}</h6>
 						</div>
 					  </li>
